# matrix-simulator

./: .cursorrules  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
.cursor/rules/: bmad-agent-chat-titles.mdc  code-review-communication.mdc  communication-fr.md  core-testing.mdc  cpp-juce-standards.mdc  matrix-simulator-project.mdc  process-clean-code.md  quick-dev-communication.mdc
Source/: DeviceInquiry.h  Main.cpp
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: deferred-work.md  spec-midi-local-from-to.md  spec-window-height-logs-resize.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/custom/: config.toml
